--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,7 +11,7 @@
 
   <tbody>
     <% @tasks.each do |task| %>
-      <tr>
+      <tr class = "task_row">
         <td><%= task.name %></td>
         <td><%= task.description %></td>
         <td><%= link_to 'Show', task %></td>
