--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_area :description %>
   </div>
 
+  <div class="field">
+    <%= form.label :expired_at %>
+    <%= form.date_field :expired_at %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
