Implement task status feature with dropdown menu

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.date_field :expired_at %>
   </div>
 
+  <div class="field">
+    <%= form.label :status %>
+    <%= form.select :status, Task::STATUS, include_blank: '選択してください' %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
