--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -13,5 +13,10 @@
   <%= @task.expired_at %>
 </p>
 
+<p>
+  <strong>Status:</strong>
+  <%= @task.status %>
+</p>
+
 <%= link_to 'Edit', edit_task_path(@task) %> |
 <%= link_to 'Back', tasks_path %>
