feat: Add priority to task, with tests

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -37,3 +37,5 @@
 
 <%= link_to 'New Task', new_task_path %>
 <%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %>
+<%= link_to '優先度でソートする', tasks_path(sort_priority: 'true') %>
+
