--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.select :status, Task::STATUS, include_blank: '選択してください' %>
   </div>
 
+<div class="field">
+    <%= form.label :priority %>
+    <%= form.select :priority, Task::PRIORITY, include_blank: '選択してください' %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
