--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -36,6 +36,7 @@
 <br>
 
 <%= link_to 'New Task', new_task_path %>
+<%= paginate @tasks %>
 <%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %>
 <%= link_to '優先度でソートする', tasks_path(sort_priority: 'true') %>
 
