--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,14 @@
 
   @import "bootstrap";
 
+  .footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: grid;
+    place-items: center;
+  }
+  
+  
+
+  
