--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -21,22 +21,24 @@
   </thead>
 
   <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.name %></td>
-        <td><%= task.description %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <% @tasks.each do |task| %>
+    <tr>
+      <td class="p-2"><%= task.name %></td>
+      <td class="p-2"><%= task.description %></td>
+      <td><%= link_to 'Show', task_path(task), class: 'btn btn-primary' %></td>
+      <td><%= link_to 'Edit', edit_task_path(task), class: 'btn btn-success' %></td>
+      <td><%= link_to 'Destroy', task_path(task), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
+
+    </tr>
+  <% end %>
   </tbody>
+
 </table>
 
 <br>
 
 <%= link_to 'New Task', new_task_path %>
 <%= paginate @tasks %>
-<%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %>
-<%= link_to '優先度でソートする', tasks_path(sort_priority: 'true') %>
+<%= link_to 'Sort by deadline', tasks_path(sort_expired: "true") %>
+<%= link_to 'Sort by priority', tasks_path(sort_priority: 'true') %>
 
