--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,9 @@
+<% if session[:user_id] %>
+  <%= link_to 'Logout', logout_path, method: :delete %>
+<% else %>
+  <%= link_to 'Login', login_path %>
+<% end %>
+
 <%= form_with(url: tasks_path, method: :get) do |form| %>
   <%= form.label :name %>
   <%= form.text_field :name, value: params[:name] %>
