課題再提出修正完了

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -23,6 +23,7 @@
     <tr>
       <th>Name</th>
       <th>Description</th>
+      <th>User</th> <!-- 追加 -->
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -32,6 +33,7 @@
     <tr>
       <td class="p-2"><%= task.name %></td>
       <td class="p-2"><%= task.description %></td>
+      <td class="p-2"><%= task.user&.email %></td> <!-- 追加＆修正 -->
       <td><%= link_to 'Show', task_path(task), class: 'btn btn-primary' %></td>
       <td><%= link_to 'Edit', edit_task_path(task), class: 'btn btn-success' %></td>
       <td><%= link_to 'Destroy', task_path(task), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
