--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <th>Email</th>
       <th>Tasks count</th>
+      <th>Role</th> <!-- ロール（Role）列を追加 -->
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +13,7 @@
       <tr>
         <td><%= user.email %></td>
         <td><%= user.tasks.count %></td>
+        <td><%= user.admin ? 'Admin' : 'General' %></td>
         <td><%= link_to 'Show', [:admin, user] %></td>
         <td><%= link_to 'Edit', [:edit, :admin, user] %></td>
         <td><%= link_to 'Destroy', [:admin, user], method: :delete, data: { confirm: 'Are you sure?' } %></td>
