--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,3 +1,6 @@
+<%= link_to 'Logout', logout_path, method: :delete %>
+<%= link_to 'New User', new_admin_user_path %>
+
 <table>
   <thead>
     <tr>
