--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -36,6 +36,11 @@
     <%= form.select :priority, Task::PRIORITY, include_blank: '選択してください' %>
   </div>
 
+  <div class="field">
+    <%= form.label :labels %>
+    <%= form.collection_check_boxes :label_ids, Label.all, :id, :name %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
