--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -36,10 +36,12 @@
     <%= form.select :priority, Task::PRIORITY, include_blank: '選択してください' %>
   </div>
 
+  <%= form.collection_check_boxes :label_ids, Label.all, :id, :name do |b| %>
   <div class="field">
-    <%= form.label :labels %>
-    <%= form.collection_check_boxes :label_ids, Label.all, :id, :name %>
+    <%= b.check_box %>
+    <%= b.label %>
   </div>
+<% end %>
 
   <div class="actions">
     <%= form.submit %>
